@@ -6,7 +6,7 @@ SYNOPSIS
     rxvt [options] [-e command [ args ]]
 
 DESCRIPTION
-    rxvt-unicode, version 7.3a, is a colour vt102 terminal emulator intended
+    rxvt-unicode, version 7.4, is a colour vt102 terminal emulator intended
     as an *xterm*(1) replacement for users who do not require features such
     as Tektronix 4014 emulation and toolkit-style configurability. As a
     result, rxvt-unicode uses much less swap space -- a significant
@@ -1145,8 +1145,7 @@ LOGIN STAMP
 COLORS AND GRAPHICS
     In addition to the default foreground and background colours, rxvt can
     display up to 16 colours (8 ANSI colours plus high-intensity bold/blink
-    versions of the same). Here is a list of the colours with their rgb.txt
-    names.
+    versions of the same). Here is a list of the colours with their names.
 
        color0          (black)         = Black         
        color1          (red)           = Red3          
@@ -1171,6 +1170,17 @@ COLORS AND GRAPHICS
     background, cursorColor, cursorColor2, colorBD, colorUL as a number
     0-15, as a convenient shorthand to reference the colour name of
     color0-color15.
+
+    If Xft support has been compiled in and as long as Xft/Xrender/X don't
+    get their act together, rxvt-unicode will support
+    "rgba:rrrr/gggg/bbbb/aaaa" (recommended, but MUST have 4
+    digits/component), "#ARGB", "#AARRGGBB" and "#AAAARRRRGGGGBBBB" colour
+    specifications, in addition to the ones provided by X, where the
+    additional A component specifies alpha (opacity) values (0 is completely
+    transparent and the maximum is opaque). You probably need to specify
+    "-depth 32", too, and have the luck that your X-server uses ARGB pixel
+    layout, as X is far from just supporting ARGB visuals out of the box,
+    and rxvt-unicode just fudges around.
 
     Note that -rv ("reverseVideo: True") simulates reverse video by always
     swapping the foreground/background colours. This is in contrast to
